update estrutura do index.html
limpando linhas desnecessarias

--- a/sessaoPipoca/index.html
+++ b/sessaoPipoca/index.html
@@ -72,7 +72,7 @@
                     <th>sem dados</th>
                 </tr>
                 <tr>
-                    <th><a href="https://www.netflix.com/br/title/81254224"><img src="" height="75px" width="100"></a></th>
+                    <th><a href="https://www.netflix.com/br/title/81254224"><img src="./img/dilemaRedes.jpg" height="75px" width="100"></a></th>
                     <th>Filme</th>
                     <th>Dilema das Redes</th>
                     <th>Documentario</th>
@@ -84,7 +84,7 @@
                     <th>sem dados</th>
                 </tr>
                 <tr>
-                    <th><a href="https://gekkou.com.br/manga/234/"><img src="" height="75px" width="100px"></a></th>
+                    <th><a href="https://gekkou.com.br/manga/234/"><img src="./img/lookism.jpg" height="75px" width="100px"></a></th>
                     <th>Manga</th>
                     <th>Lookism</th>
                     <th>Artes</th>
@@ -99,19 +99,7 @@
                     <th>sem dados</th>
                     <th>sem dados</th>
                     <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                </tr>
-                <tr>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
+                    <th>sedados</th>
                     <th>sem dados</th>
                     <th>sem dados</th>
                     <th>sem dados</th>
@@ -119,89 +107,7 @@
                     <th>sem dados</th>
                     <th>sem dados</th>
                 </tr>
-                <tr>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                </tr>
-                <tr>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                </tr>
-                <tr>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                </tr>
-                <tr>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                </tr>
-                <tr>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                </tr>
-                <tr>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                </tr>
-                <tr>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
-                    <th>sem dados</th>
+                
                 </tr>
             </tbody>
         </table>
